# ucc-ai-quest-2023

./: .gitignore  README.md  pyproject.toml
infection/augmentations/: __init__.py
infection/callbacks/: __init__.py  visualize_callbacks.py  visualizer_callback.py  wandb_callback.py
infection/configs/: public+warmup.yaml  public.yaml  warmup.yaml
infection/datasets/: __init__.py  datasets.py  tfms_datasets.py
infection/losses/: __init__.py  ce_loss.py  dice_loss.py  lovasz_loss.py  tversky_loss.py
infection/metrics/: __init__.py
infection/models/: __init__.py  dinov2.py  models.py
infection/scripts/: ensemble.sh  eval.sh  predict.sh  predict_eval.sh  submission.sh  train.sh
infection/submission/: prepare_results_for_submission.ipynb  prepare_results_for_submission.py
infection/tools/: ensemble.py  eval.py  predict.py  submission.py  train.py
infection/utilities/: __init__.py  utils.py
infection/utilities/visualization/: __init__.py
yolov8/: YOLOv8.ipynb  data.yml  predict.py  predict_eval.sh  preprocess.py  preprocess.sh  public+warmup.yml  train.py  train.sh
